--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,55 +1,98 @@
 @media (min-width:1200px) {
-  .header {
-    width: 1120px;
-    gap: 360px;
-    margin: 0 auto;
-    margin-top: 72px;
-  }
+    .header {
+        width: 1120px;
+        gap: 360px;
+        margin: 0 auto;
+        margin-top: 72px;
+    }
 
-  .link {
-    font-size: 24px;
-    line-height: 29px;
-  }
+    .link {
+        font-size: 24px;
+        line-height: 29px;
+    }
 
-  .lang {
-    width: 120px;
-    height: 40px;
-  }
+    .lang {
+        width: 120px;
+        height: 40px;
+    }
+
+    .menu {
+        display: none;
+    }
 }
 
 @media (max-width:1200px) {
-  .header {
-    width: 681px;
-    gap: 160px;
-    margin: 0 auto;
-    margin-top: 36px;
-  }
+    .header {
+        width: 681px;
+        gap: 160px;
+        margin: 0 auto;
+        margin-top: 36px;
+    }
 
-  .link {
-    font-size: 20px;
-    line-height: 24px;
-  }
+    .link {
+        font-size: 20px;
+        line-height: 24px;
+    }
 
-  .lang {
-    width: 100px;
-    height: 33px;
-  }
+    .lang {
+        width: 100px;
+        height: 33px;
+    }
+
+    .menu {
+        display: none;
+    }
+}
+
+@media (max-width:768px) {
+    .header {
+        width: 80%;
+        justify-content: space-between;
+        gap: 0px;
+        display: flex;
+        margin: 0 auto;
+        margin-top: 41px;
+    }
+
+    .link {
+        display: none;
+    }
+
+    .lang {
+        display: none;
+    }
+
+    .menu {
+        display: flex;
+    }
 }
 
 .header {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
+
 }
 
 .link {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 500;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
 
-  color: #272727;
+    color: #272727;
 }
 
 .logo {
-  width: 158px;
-  height: 44px;
+    width: 158px;
+    height: 44px;
+}
+
+.menu_icon {
+    width: 25px;
+    height: 24px;
+}
+
+.menu_open {
+    background-color: #E8E8E8;
+    width: 100%;
+    height: 100%;
 }
