--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,139 +1,137 @@
 @media (min-width:1200px) {
-    .header {
-        width: 1120px;
-        gap: 360px;
-        margin: 0 auto;
-        margin-top: 72px;
-    }
+  .header {
+    width: 1120px;
+    gap: 360px;
+    margin: 0 auto;
+    margin-top: 72px;
+  }
 
-    .link {
-        font-size: 24px;
-        line-height: 29px;
-    }
+  .link {
+    font-size: 24px;
+    line-height: 29px;
+  }
 
-    .lang {
-        width: 120px;
-        height: 40px;
-    }
-
-    .menu {
-        display: none;
-    }
+  .menu {
+    display: none;
+  }
 }
 
 @media (max-width:1200px) {
-    .header {
-        width: 681px;
-        gap: 160px;
-        margin: 0 auto;
-        margin-top: 36px;
-    }
+  .header {
+    width: 681px;
+    gap: 160px;
+    margin: 0 auto;
+    margin-top: 36px;
+  }
 
-    .link {
-        font-size: 20px;
-        line-height: 24px;
-    }
+  .link {
+    font-size: 20px;
+    line-height: 24px;
+  }
 
-    .lang {
-        width: 100px;
-        height: 33px;
-    }
-
-    .menu {
-        display: none;
-    }
+  .menu {
+    display: none;
+  }
 }
 
 @media (max-width:768px) {
-    .header {
-        width: 80%;
-        justify-content: space-between;
-        gap: 0px;
-        display: flex;
-        margin: 0 auto;
-        margin-top: 41px;
-    }
+  .header {
+    width: 80%;
+    justify-content: space-between;
+    gap: 0px;
+    display: flex;
+    margin: 0 auto;
+    margin-top: 41px;
+  }
 
-    .link {
-        display: none;
-    }
+  .link {
+    display: none;
+  }
 
-    .lang {
-        display: none;
-    }
-
-    .menu {
-        display: flex;
-    }
+  .menu {
+    display: flex;
+  }
 }
 
 .header {
-    display: flex;
-    align-items: center;
-    transition: all 1s;
+  display: flex;
+  align-items: center;
+  transition: all 1s;
 
 }
 
 .link {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 500;
+  cursor: pointer;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
 
-    color: #272727;
+  color: #272727;
+}
+
+.link:hover {
+  opacity: 70%;
 }
 
 .logo {
-    width: 158px;
-    height: 44px;
+  cursor: pointer;
+  width: 158px;
+  height: 44px;
+  transition: all 0.1s;
+}
+
+.logo:hover {
+  width: 160px;
+  height: 46px;
 }
 
 .logo_close {
-    display: none;
-}
-
-.lang_open {
-    display: flex;
-    width: 140px;
-    height: 46.67px;
+  display: none;
 }
 
 .menu {
-    transition: all 1s;
+  background-color: transparent;
+  border: none;
+  transition: all 1s;
 }
 
 .menu_open {
-    position: absolute;
-    left: 0;
-    top: 0;
-    background-color: #E8E8E8;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    padding-top: 20%;
-    align-items: center;
-    gap: 94px;
-    transition: all 1s;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: #E8E8E8;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-top: 20%;
+  align-items: center;
+  gap: 94px;
+  transition: all 1s;
 }
 
 .menu_link {
-    display: none;
+  display: none;
 }
 
 .menu_link_open {
-    display: flex;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 32px;
-    line-height: 39px;
+  display: flex;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 39px;
 
-    color: #000000;
+  color: #000000;
 
 }
 
 .menu_icon {
-    width: 25px;
-    height: 24px;
-    transition: all 1s;
+  width: 25px;
+  height: 24px;
+  transition: all 1s;
+}
+
+.menu_icon:hover {
+  opacity: 90%;
 }
