--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -37,6 +37,7 @@
 @media (max-width:768px) {
   .header {
     width: 80%;
+    min-width: 320px;
     justify-content: space-between;
     gap: 0px;
     display: flex;
@@ -110,13 +111,14 @@
   top: 0;
   background-color: #E8E8E8;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   padding-top: 47px;
   align-items: center;
   gap: 94px;
   transition: background 1s;
+  z-index: 1000;
 }
 
 .menu_link {
