--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,5 +1,6 @@
 @media (min-width:1200px) {
   .header {
+    height: 10vh;
     width: 1120px;
     gap: 360px;
     margin: 0 auto;
@@ -18,6 +19,7 @@
 
 @media (max-width:1200px) {
   .header {
+    height: 20vh;
     width: 681px;
     gap: 160px;
     margin: 0 auto;
@@ -36,6 +38,7 @@
 
 @media (max-width:768px) {
   .header {
+    height: 10vh;
     width: 80%;
     min-width: 320px;
     justify-content: space-between;
